feat: token maker for jwt testing token
