# server/src/middleware/__generated__/swagger.json
@@ -438,9 +438,46 @@
 						}
 					}
 				]
+			},
+			"post": {
+				"operationId": "CreateReagent",
+				"responses": {
+					"201": {
+						"description": "Reagent created successfully",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Reagent"
+								}
+							}
+						}
+					}
+				},
+				"description": "Create a reagent by passing in all the required props.\r\nUser **must** be authenticated to access this endpoint (lab manager / admin)",
+				"tags": [
+					"Authentication"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"description": "- the request object containing the data of the reagent (id generated by db)",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateReagentRequest",
+								"description": "- the request object containing the data of the reagent (id generated by db)"
+							}
+						}
+					}
+				}
 			}
 		},
-		"/users/reagent/{id}": {
+		"/users/reagents/{id}": {
 			"get": {
 				"operationId": "GetReagentById",
 				"responses": {
@@ -481,55 +518,6 @@
 					}
 				]
 			},
-			"post": {
-				"operationId": "CreateReagent",
-				"responses": {
-					"201": {
-						"description": "Reagent created successfully",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Reagent"
-								}
-							}
-						}
-					}
-				},
-				"description": "Create a reagent by its ID.\r\nUser **must** be authenticated to access this endpoint",
-				"tags": [
-					"Authentication"
-				],
-				"security": [
-					{
-						"jwt": []
-					}
-				],
-				"parameters": [
-					{
-						"description": "- The ID of the new reagent being created.",
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				],
-				"requestBody": {
-					"description": "- the request object containing the data of the reagent (id generated by db)",
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/CreateReagentRequest",
-								"description": "- the request object containing the data of the reagent (id generated by db)"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/users/reagent/delete/{id}": {
 			"delete": {
 				"operationId": "DeleteReagentById",
 				"responses": {
@@ -569,9 +557,7 @@
 						}
 					}
 				]
-			}
-		},
-		"/users/reagent/update/{id}": {
+			},
 			"patch": {
 				"operationId": "UpdateReagent",
 				"responses": {
